force-app/main/default/objects/Learning_Course__c/Learning_Course__c.object-meta.xml
<CustomObject>
    <label>Learning Course</label>
    <nameField>
        <displayFormat>COURSE-{0000}</displayFormat>
        <label>Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>