force-app/main/default/objects/Learning_Course__c/fields/Course_Duration__c.field-meta.xml
<CustomField>
    <fullName>Course_Duration__c</fullName>
    <label>Course Duration (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>