force-app/main/default/objects/Learning_Course__c/fields/Enrollments_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Enrollments_Related_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Enrollments</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Course</relationshipLabel>
    <relationshipName>Course</relationshipName>
    <type>Lookup</type>
</CustomField>