force-app/main/default/objects/Learning_Course__c/fields/Reviews_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Reviews_Related_List__c</fullName>
    <label>Course Reviews</label>
    <type>Lookup</type>
    <referenceTo>Course_Review__c</referenceTo>
    <relationshipLabel>Course Reviews</relationshipLabel>
    <relationshipName>Course_Review_Records</relationshipName>
</CustomField>